# Options-Pricing-Engine

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  ticker_search.py
.github/workflows/: ci.yml
app/: dashboard.py
notebooks/: options_pricing.ipynb
src/options_pricer/core/: __init__.py  binomial_tree.py  black_scholes.py  monte_carlo.py
src/options_pricer/data/: market_data.py
tests/: conftest.py  test_binomial_tree.py  test_black_scholes.py  test_iv_solver.py  test_market_data.py  test_monte_carlo.py
