[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-pricer"
version = "1.0.0"
description = "Option pricing engine: Black-Scholes, Binomial Tree (CRR), Monte Carlo"
authors = [{ name = "Kanishka Sarkar" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["options", "derivatives", "quantitative finance", "black-scholes", "monte carlo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Financial and Insurance Industry",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "yfinance>=0.2",
    "plotly>=5.20",
    "streamlit>=1.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.urls]
Homepage = "https://github.com/KAANSSAR/Options-Pricing-Engine"
Repository = "https://github.com/KAANSSAR/Options-Pricing-Engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]